Generate shared library